# rust-chat-sample

./: Cargo.toml  README.md
docs/: ssr-notes.md
src/: app.rs  hydrate.rs  lib.rs  main.rs  server.rs
